<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SpesaSeekBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookRide">

    <Button
        android:id="@+id/SearchRideButton"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="192dp"
        android:backgroundTint="#673AB7"
        android:text="@string/search_button_en"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toTopOf="@+id/bookRideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#FF7043"
        app:strokeColor="#ff7043" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/PriceKmEditText"
        android:layout_width="312dp"
        android:layout_height="39dp"
        android:hint="10"
        android:textColor="#232323"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/bookRideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <TextView
        android:id="@+id/UserNameTextView"
        android:layout_width="253dp"
        android:layout_height="101dp"
        android:text="Mario Rossi mariorossi@gmail.com"
        android:textColor="#232323"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SpesaTextView"
        app:layout_constraintEnd_toStartOf="@+id/userAvatar"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <ImageView
        android:id="@+id/userAvatar"
        android:layout_width="99dp"
        android:layout_height="101dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        android:src="@drawable/avatar" />

    <TextView
        android:id="@+id/SpesaTextView"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:text="@string/price_km_text_it"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bookRideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/DestinationEditText"
        android:layout_width="311dp"
        android:layout_height="39dp"
        android:hint="Piazza Castello, Torino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/TimeChooseEditText"
        android:layout_width="102dp"
        android:layout_height="45dp"
        android:hint="HH:MM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SearchRideButton"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spesaTextView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/spesaTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_picker_text_it"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <TextView
        android:id="@+id/spesaTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_text_it"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/DateChooseEditText"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:hint="GG/MM/AAAA"
        app:layout_constraintBottom_toTopOf="@+id/TimeChooseEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spesaTextView3"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/spesaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_km_text_it"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/bookRideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <ListView
        android:id="@+id/AvaiableCarsListView"
        android:layout_width="372dp"
        android:layout_height="166dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/bookRideButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/bookRideButton"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:backgroundTint="#FF5722"
        android:text="@string/book_now_button_en"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#673AB7" />

</androidx.constraintlayout.widget.ConstraintLayout>